Adding select a file button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <title>network</title>
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
+    <label class="select-file">
+      Select file
+      <input  type="file" title="file" name="fileUpload">
+    </label>
+
+  </div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="./js/Home.js"></script>
   <script src="./js/main.js"></script>
