Adding readme and implementing file selection functionality

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <label class="select-file">
+    <label class="select-file file-input" >
       Select file
-      <input  type="file" title="file" name="fileUpload">
+      <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
 
   </div>
