Adding filter slider

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
   <div class="container">
+
+  <div class="tree-container"></div>
+  <div class="menu">
     <label class="select-file file-input" >
       Select file
       <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
-
   </div>
+</div>
+
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="./js/Home.js"></script>
   <script src="./js/main.js"></script>
