Fixing the filter design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       Select file
       <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
+    <div class="filter-container">
+    <input type="range" name="slider" id="slider" class="filter-slide">
+    <button class="filter-btn">Apply</button>
+
+    <p class="filter-value">0</p>
+  </div>
   </div>
 </div>
 
