--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
     <div class="filter-container">
+    <p class="year-filter">Year:</p>
     <input type="range" name="slider" id="slider" class="filter-slide">
-    <button class="filter-btn">Apply</button>
+    <button class="reset-btn">Reset</button>
 
-    <p class="filter-value">0</p>
+    <p class="filter-value"></p>
   </div>
   </div>
 </div>
