--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       Select file
       <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
-    <div class="filter-container">
+    <!-- <div class="filter-container">
     <p class="year-filter">Year:</p>
     <input type="range" name="slider" id="slider" class="filter-slide">
     <button class="reset-btn">Reset</button>
 
     <p class="filter-value"></p>
-  </div>
+  </div> -->
   </div>
 </div>
 
