Adding search functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <div id="notification"></div>
 
   <div class="tree-container"></div>
   <div class="menu">
@@ -15,6 +16,10 @@
       Select file
       <input class="file-input"  type="file" title="file" name="fileUpload">
     </label>
+
+    <label for="searchField"></label>
+    <input id="searchField" name="searchField" type="text" placeholder="Search for a word">
+    
     <!-- <div class="filter-container">
     <p class="year-filter">Year:</p>
     <input type="range" name="slider" id="slider" class="filter-slide">
