fixing the filtering functionality to execlude the children if the parent was filtered out

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <label for="searchField"></label>
     <input id="searchField" name="searchField" type="text" placeholder="Search for a word">
     
-    <!-- <div class="filter-container">
+    <div class="filter-container">
     <p class="year-filter">Year:</p>
     <input type="range" name="slider" id="slider" class="filter-slide">
-    <button class="reset-btn">Reset</button>
+    <!-- <button class="reset-btn">Reset</button> -->
 
     <p class="filter-value"></p>
-  </div> -->
+  </div>
   </div>
 </div>
 
