Adding deletion functionality

--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
 
     <label for="searchField"></label>
     <input id="searchField" name="searchField" type="text" placeholder="Search for a word">
-    
-    <div class="filter-container">
-    <p class="year-filter">Year:</p>
-    <input type="range" name="slider" id="slider" class="filter-slide">
-    <!-- <button class="reset-btn">Reset</button> -->
-
-    <p class="filter-value"></p>
-  </div>
+    <div class="filters">
+      <div class="year-filter-container">
+        <p class="year-filter">Year:</p>
+        <input type="range" name="slider" id="year-slider" class="year-filter-slide">
+        <p class="year-filter-value"></p>
+      </div>
+      <div class="frequency-filter-container">
+        <p class="frequency-filter">Count:</p>
+        <input type="range" name="slider" id="frequency-slider" class="frequecny-filter-slide">
+        <p class="frequency-filter-value"></p>
+      </div>
+    </div>
   </div>
 </div>
 
