Fixing the year filter and adding frequency filter

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <input id="searchField" name="searchField" type="text" placeholder="Search for a word">
     <div class="filters">
       <div class="year-filter-container">
-        <p class="year-filter">Year:</p>
-        <input type="range" name="slider" id="year-slider" class="year-filter-slide">
-        <p class="year-filter-value"></p>
+        <p class="year-filter">Year</p>
+        <input title="year" type="range" name="slider" id="year-slider" class="year-filter-slide">
+        <p class="year-filter-value">-</p>
       </div>
       <div class="frequency-filter-container">
-        <p class="frequency-filter">Count:</p>
-        <input type="range" name="slider" id="frequency-slider" class="frequecny-filter-slide">
-        <p class="frequency-filter-value"></p>
+        <p class="frequency-filter">Frequency</p>
+        <input title="frequency" type="range" name="slider" id="frequency-slider" class="frequency-filter-slide">
+        <p class="frequency-filter-value">-</p>
       </div>
     </div>
   </div>
