--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
     <div class="filters">
       <div class="year-filter-container">
         <p class="year-filter">Year</p>
-        <input title="year" type="range" name="slider" id="year-slider" class="year-filter-slide">
-        <p class="year-filter-value">-</p>
+        <div class="double-slider">
+            <input title="min year" type="range" name="min-year" id="min-year-slider" class="min-year-filter-slide">
+            <input title="max year" type="range" name="max-year" id="max-year-slider" class="max-year-filter-slide">
+        </div>
+      <div class="year-filter-value">
+        <p class="min-year-filter-value"></p>
+        <p>-</p>
+        <p class="max-year-filter-value"></p>
       </div>
+    </div>
       <div class="frequency-filter-container">
         <p class="frequency-filter">Frequency</p>
         <input title="frequency" type="range" name="slider" id="frequency-slider" class="frequency-filter-slide">
