--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="./js/Home.js"></script>
+  <script src="./js/filtering.js"></script>
+  <script src="./js/notification.js"></script>
+  <script src="./js/search.js"></script>
+  <script src="./js/rightClick.js"></script>
   <script src="./js/main.js"></script>
 
 </body>
