Adding bar chart

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       <input id="searchYear" name="searchYear" type="number" placeholder="Search for a year">
       <label for="yearcolor"></label>
       <input id="year-color"  type="color">
-  </div>
+    </div>
 
-  <div class="search-frequency-color">
-    <label for="searchFrequency"></label>
-    <input id="searchFrequency" name="searchFrequency" type="number" placeholder="Search for a frequency">
-    <label for="frequency"></label>
-    <input id="frequency-color"  type="color">
-  </div>
+    <div class="search-frequency-color">
+      <label for="searchFrequency"></label>
+      <input id="searchFrequency" name="searchFrequency" type="number" placeholder="Search for a frequency">
+      <label for="frequency"></label>
+      <input id="frequency-color"  type="color">
+    </div>
 
     <div class="filters">
       <div class="year-filter-container">
@@ -70,6 +70,8 @@
         <input type="range" id="timeSlider" min="0" max="100" value="0">
       </div>
     </div>
+    <div id="chart"></div>
+
   </div>
 </div>
 
@@ -80,6 +82,7 @@
   <script src="./js/search.js"></script>
   <script src="./js/rightClick.js"></script>
   <script src="./js/timeLine.js"></script>
+  <script src="./js/chart.js"></script>
   <script src="./js/main.js"></script>
 
 </body>
